tools/dns-block/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguardhome
spec:
  selector:
    matchLabels:
      deployment: adguardhome
  template:
    metadata:
      labels:
        deployment: adguardhome
    spec:
      containers:
        - name: adguardhome
          image: adguardhome
          args:
            - --no-check-update
            - -c
            - /opt/adguardhome/work/AdGuardHome.yaml
          resources:
            limits:
              memory: 384Mi
              cpu: 400m
            requests:
              memory: 256Mi
              cpu: 50m
          readinessProbe:
            tcpSocket:
              port: tcpdns
            initialDelaySeconds: 15
            periodSeconds: 10
          ports:
            - containerPort: 5353
              name: udpdns
              protocol: UDP
            - containerPort: 5353
              name: tcpdns
              protocol: TCP
            - containerPort: 3000
              name: http
              protocol: TCP
          securityContext:
            runAsNonRoot: true
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - NET_ADMIN
                - NET_RAW
          volumeMounts:
            - name: adguard-config
              mountPath: /opt/adguardhome/work
        - name: adguard-exporter
          image: adguard-exporter:latest
          resources:
            limits:
              memory: 64Mi
              cpu: 10m
            requests:
              memory: 32Mi
              cpu: 1m
          ports:
            - name: metrics
              containerPort: 9618
              protocol: TCP
      serviceAccountName: dns-runner
      volumes:
        - name: adguard-config
          persistentVolumeClaim:
            claimName: adguard-config-2
