tools/dns-block/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: "dns"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: udpdns
      port: 53
      protocol: UDP
      targetPort: udpdns
      appProtocol: dns
  selector:
    deployment: adguardhome
---
apiVersion: v1
kind: Service
metadata:
  name: dns-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: "dns"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: tcpdns
      port: 53
      protocol: TCP
      targetPort: tcpdns
      appProtocol: dns
  selector:
    deployment: adguardhome
---
apiVersion: v1
kind: Service
metadata:
  name: dns-web
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
      appProtocol: http
  selector:
    deployment: adguardhome
