tools/dns-block/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: adguardhome
  annotations:
    console.alpha.openshift.io/overview-app-route: "true"
spec:
  host: adguardhome.apps.homelab.csfreak.com
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: dns-web
    weight: 100
  wildcardPolicy: None
